--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
     }
     .introduction h3::after {
         content: "";
-        display: block;
-        width: 30px; /* 根据需要调整宽度 */
-        height: 2px;
+        position: absolute;
+        left: 0;
+        bottom: -5px; /* 调整横线与文字的间距 */
+        width: 100%;
+        height: 1px;
         background-color: #ccc;
-        margin-top: 5px; /* 调整横线与文字的间距 */
     }
 
 </style>
