--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         bottom: -5px; /* 调整横线与文字的间距 */
         width: 100%;
         height: 1px;
-        background-color: #ccc;
+        background-color: hwb(0 13% 87%);
     }
 
 </style>
