--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         font-size: 20px; /* 根据需要调整字体大小 */
         color: #555; /* 根据需要调整颜色 */
         margin-top: 10px; /* 添加一些顶部间距 */
+        position: relative;
     }
     .introduction h3::after {
         content: "";
@@ -50,7 +51,7 @@
         bottom: -5px; /* 调整横线与文字的间距 */
         width: 100%;
         height: 1px;
-        background-color: hwb(0 13% 87%);
+        background-color: #ccc;
     }
 
 </style>
