--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
         margin: 20px;
     }
 
+    .introduction p {
+        color: #ccc;
+    }
+
     .introduction h2 {
         position: relative;
         font-size: 24px; /* 根据需要调整字体大小 */
     }
     .introduction h3 {
         font-size: 20px; /* 根据需要调整字体大小 */
-        color: #555; /* 根据需要调整颜色 */
+        color: #ccc; /* 根据需要调整颜色 */
         margin-top: 10px; /* 添加一些顶部间距 */
         position: relative;
     }
@@ -48,7 +52,7 @@
         content: "";
         position: absolute;
         left: 0;
-        bottom: -5px; /* 调整横线与文字的间距 */
+        bottom: 0px; /* 调整横线与文字的间距 */
         width: 100%;
         height: 1px;
         background-color: #ccc;
