[update] index.html

--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
     }
 
     .introduction p {
-        color: #ccc;
+        color: #ccccccaa;
         line-height: 1.6; 
     }
 
     .introduction h2 {
         position: relative;
-        font-size: 24px; /* 根据需要调整字体大小 */
+        font-size: 36px; /* 根据需要调整字体大小 */
     }
     .introduction h3 {
         font-size: 20px; /* 根据需要调整字体大小 */
-        color: #ccc; /* 根据需要调整颜色 */
+        color: #ccccccaa; /* 根据需要调整颜色 */
         margin-top: 10px; /* 添加一些顶部间距 */
         position: relative;
     }
@@ -53,10 +53,10 @@
         content: "";
         position: absolute;
         left: 0;
-        bottom: 0px; /* 调整横线与文字的间距 */
+        bottom: -15px; /* 调整横线与文字的间距 */
         width: 100%;
         height: 1px;
-        background-color: #ccc;
+        background-color: #ccccccaa;
     }
 
 </style>
