[update] index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>个人网页</title>
+<title>My Website</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-j+1Anvuq2NMq7I3+MQ+1lJOQ1w6n9CY5zwC8hvo4nl76ZzysI9PISOnkOTqYqzqK9N7epH1yPVlWhj1RlV67Jg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -35,7 +36,7 @@
     }
 
     .introduction p {
-        color: #ccccccaa;
+        color: #888;
         line-height: 1.6; 
     }
 
@@ -45,7 +46,7 @@
     }
     .introduction h3 {
         font-size: 20px; /* 根据需要调整字体大小 */
-        color: #ccccccaa; /* 根据需要调整颜色 */
+        color: #888; /* 根据需要调整颜色 */
         margin-top: 10px; /* 添加一些顶部间距 */
         position: relative;
     }
@@ -56,7 +57,16 @@
         bottom: -15px; /* 调整横线与文字的间距 */
         width: 100%;
         height: 1px;
-        background-color: #ccccccaa;
+        background-color: #888;
+    }
+
+    .icons {
+        margin-top: 10px;
+    }
+    .icons a {
+        color: #555;
+        text-decoration: none;
+        margin-right: 10px;
     }
 
 </style>
@@ -72,6 +82,12 @@
             <p>I am a PhD student in the Department of Computer Science and Applied Mathematics at the Weizmann Institute of Science under the supervision of Prof. Yaron Lipman.
                 My main research interest is in devising deep learning methods for various 3D shapes analysis and synthesis tasks.</p>
         </div>
+    </div>
+    <div class="icons">
+        <a href="huangky22@mails.tsinghua.edu.cn"><i class="fas fa-envelope"></i></a>
+        <a href="https://github.com/KJaebye"><i class="fab fa-github"></i></a>
+        <a href="https://scholar.google.com.hk/citations?user=df7fnwQAAAAJ"><i class="fab fa-google"></i></a>
+        <a href="https://www.linkedin.com/in/yourusername"><i class="fab fa-linkedin"></i></a>
     </div>
     <!-- 这里放置其他内容，例如其他部分的内容或链接 -->
 </div>
