--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Website</title>
+<link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
+        rel="stylesheet">
+<link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+
 <style>
     body {
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
+    }
+    .footer .icon-link {
+    font-size: 25px;
+    color: #000;
     }
     .container {
         display: flex;
@@ -81,11 +90,18 @@
             <h3>PhD Candidate | AI Researcher | Aircraft Engineer</h3>
             <p>I am a PhD student in the Department of Computer Science and Applied Mathematics at the Weizmann Institute of Science under the supervision of Prof. Yaron Lipman.
                 My main research interest is in devising deep learning methods for various 3D shapes analysis and synthesis tasks.</p>
-
         </div>
     </div>
     
     <!-- 这里放置其他内容，例如其他部分的内容或链接 -->
+</div>
+
+<div class="container">
+    <div class="content has-text-centered">
+        <a class="icon-link" href="" class="external-link" disabled>
+            <i class="fab fa-github"></i>
+          </a>
+    </div>
 </div>
 
 </body>
