--- a/index.html
+++ b/index.html
@@ -4,20 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Website</title>
-<link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
-        rel="stylesheet">
-<link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-
+<link rel="icon" href="./profile/bug.svg">
 <style>
     body {
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
-    }
-    .footer .icon-link {
-    font-size: 25px;
-    color: #000;
     }
     .container {
         display: flex;
@@ -80,6 +72,7 @@
 
 </style>
 </head>
+
 <body>
 
 <div class="container">
@@ -96,13 +89,6 @@
     <!-- 这里放置其他内容，例如其他部分的内容或链接 -->
 </div>
 
-<div class="container">
-    <div class="content has-text-centered">
-        <a class="icon-link" href="" class="external-link" disabled>
-            <i class="fab fa-github"></i>
-          </a>
-    </div>
-</div>
 
 </body>
 </html>
