--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Website</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 <link rel="icon" href="./profile/bug.svg">
 <style>
     body {
@@ -89,6 +91,9 @@
     <!-- 这里放置其他内容，例如其他部分的内容或链接 -->
 </div>
 
+<div class="container">
+    <i class="fas fa-search"></i>
+</div>
 
 </body>
 </html>
