[update] index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
 </div>
 
 <div class="container">
-    <i class="fas fa-search"></i>
+    <i class="fa fa-envelope-square"></i>
+    <i class="fa fa-github"></i>
+    <i class="fa fa-graduation-cap"></i>
+    <i class="fa fa-linkedin-square"></i>
 </div>
 
 </body>
