--- a/index.html
+++ b/index.html
@@ -93,10 +93,14 @@
 
 <div class="container">
     <i class="fa fa-envelope-square"></i>
-    <i class="fa fa-github"></i>
+    <ion-icon name="logo-github"></ion-icon>
     <i class="fa fa-graduation-cap"></i>
-    <i class="fa fa-linkedin-square"></i>
+    <ion-icon name="heart"></ion-icon>
 </div>
+
+
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 </body>
 </html>
