[update] index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         margin: 0;
         padding: 0;
     }
+    .icon-link {
+    font-size: 25px;
+    color: #000;
+    }
     .container {
         display: flex;
         flex-direction: column;
@@ -92,10 +96,15 @@
 </div>
 
 <div class="container">
-    <i class="fa fa-envelope-square"></i>
+    <div class="content has-text-centered">
+        <a class="icon-link" href="" class="external-link" disabled>
+            <i class="fa fa-envelope-square"></i>
+        </a>
+    </div>
+    
     <ion-icon name="logo-github"></ion-icon>
     <i class="fa fa-graduation-cap"></i>
-    <ion-icon name="heart"></ion-icon>
+    <ion-icon name="logo-linkedin"></ion-icon>
 </div>
 
 
