[update] index.html

--- a/index.html
+++ b/index.html
@@ -100,11 +100,16 @@
         <a class="icon-link" href="" class="external-link" disabled>
             <i class="fa fa-envelope-square"></i>
         </a>
+        <a class="icon-link" href="" class="external-link" disabled>
+            <ion-icon name="logo-github"></ion-icon>
+        </a>
+        <a class="icon-link" href="" class="external-link" disabled>
+            <i class="fa fa-graduation-cap"></i>
+        </a>
+        <a class="icon-link" href="" class="external-link" disabled>
+            <ion-icon name="logo-linkedin"></ion-icon>
+        </a>
     </div>
-    
-    <ion-icon name="logo-github"></ion-icon>
-    <i class="fa fa-graduation-cap"></i>
-    <ion-icon name="logo-linkedin"></ion-icon>
 </div>
 
 
