[update] index.html

--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
 
 <div class="container">
     <div class="content has-text-centered">
-        <a class="icon-link" href="" class="external-link" disabled>
+        <a class="icon-link external-link" href="">
             <i class="fa fa-envelope-square"></i>
         </a>
-        <a class="icon-link" href="" class="external-link" disabled>
+        <a class="icon-link external-link" href="">
             <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a class="icon-link" href="" class="external-link" disabled>
+        <a class="icon-link external-link" href="">
             <i class="fa fa-graduation-cap"></i>
         </a>
-        <a class="icon-link" href="" class="external-link" disabled>
+        <a class="icon-link external-link" href="">
             <ion-icon name="logo-linkedin"></ion-icon>
         </a>
     </div>
