--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         padding: 0;
     }
     .icon-link {
-    font-size: 25px;
-    color: #000;
+        font-size: 25px;
+        color: #000;
+        text-decoration: none;
     }
     .container {
         display: flex;
