[update] index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
         </div>
 
         <div class="container">
-            <div class="content has-text-centered">
+            <!-- 横向排布 -->
+            <!-- <div class="content has-text-centered">
                 <a class="icon-link external-link" href="">
                     <i class="fa fa-envelope-square"></i>
                 </a>
@@ -106,7 +107,20 @@
                 <a class="icon-link external-link" href="">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
-            </div>
+            </div> -->
+            <!-- 竖向排布 -->
+            <a class="icon-link external-link" href="">
+                <i class="fa fa-envelope-square"></i>
+            </a>
+            <a class="icon-link external-link" href="">
+                <ion-icon name="logo-github"></ion-icon>
+            </a>
+            <a class="icon-link external-link" href="">
+                <i class="fa fa-graduation-cap"></i>
+            </a>
+            <a class="icon-link external-link" href="">
+                <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
         </div>
     </div>
     
