--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
     }
     .module .image {
         flex: 1;
-        max-width: 50%;
+        max-width: 35%;
         padding-right: 20px;
     }
     .module .content {
         flex: 1;
-        max-width: 50%;
+        max-width: 65%;
     }
     .module img {
         max-width: 100%;
@@ -143,8 +143,14 @@
 <div class="container">
     <div class="module">
         <div class="image">
+            <h2>PUBLICATIONS</h2>
+        </div>
+        <div class="content"></div>
+    </div>
+    <div class="module">
+        <div class="image">
             <!-- You can put your image, video or animated gif here -->
-            <img src="profile/hky_avatar.jpg" alt="科研工作图片">
+            <img src="material/500x300.png" alt="科研工作图片">
         </div>
         <div class="content">
             <h2>科研工作标题</h2>
