--- a/index.html
+++ b/index.html
@@ -141,20 +141,24 @@
 </div>
 
 <div class="container">
-    <div class="module">
-        <div class="image">
-            <h2>PUBLICATIONS</h2>
+    <div class="content has-text-centered">
+        <div class="module">
+            <div class="image">
+                <h2>PUBLICATIONS</h2>
+            </div>
+            <div class="content"></div>
         </div>
-        <div class="content"></div>
     </div>
-    <div class="module">
-        <div class="image">
-            <!-- You can put your image, video or animated gif here -->
-            <img src="material/500x300.png" alt="科研工作图片">
-        </div>
-        <div class="content">
-            <h2>科研工作标题</h2>
-            <p>科研工作描述...</p>
+    <div class="content has-text-centered">
+        <div class="module">
+            <div class="image">
+                <!-- You can put your image, video or animated gif here -->
+                <img src="material/500x300.png" alt="科研工作图片">
+            </div>
+            <div class="content">
+                <h2>科研工作标题</h2>
+                <p>科研工作描述...</p>
+            </div>
         </div>
     </div>
 </div>
