--- a/index.html
+++ b/index.html
@@ -141,14 +141,7 @@
 </div>
 
 <div class="container">
-    <div class="content has-text-centered">
-        <div class="module">
-            <div class="image">
-                <h2>PUBLICATIONS</h2>
-            </div>
-            <div class="content"></div>
-        </div>
-    </div>
+    <h2 style="text-align: left;">PUBLICATIONS</h2>
     <div class="content has-text-centered">
         <div class="module">
             <div class="image">
