[update] index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         color: #000;
         text-decoration: none;
     }
+    h2 {
+        text-align: left;
+    }
     .container {
         display: flex;
         flex-direction: column;
