[update] index.html

--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
         color: #000;
         text-decoration: none;
     }
-    h2 {
-        text-align: left;
-    }
     .container {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: left;
+        width: 800px;
     }
     .profile {
         display: flex;
@@ -143,8 +141,9 @@
     <!-- 这里放置其他内容，例如其他部分的内容或链接 -->
 </div>
 
-<h2 style="text-align: left;">PUBLICATIONS</h2>
+
 <div class="container">
+    <h2 style="text-align: left;">PUBLICATIONS</h2>
     <div class="content has-text-centered">
         <div class="module">
             <div class="image">
