--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     .container {
         display: flex;
         flex-direction: column;
-        align-items: left;
-        width: 800px;
+        align-items: center;
+        width: 1200px;
     }
     .profile {
         display: flex;
