[update] index.html

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
         <div class="container">
             <!-- 横向排布 -->
-            <!-- <div class="content has-text-centered">
+            <div class="content has-text-centered">
                 <a class="icon-link external-link" href="">
                     <i class="fa fa-envelope-square"></i>
                 </a>
@@ -121,9 +121,9 @@
                 <a class="icon-link external-link" href="">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
-            </div> -->
+            </div>
             <!-- 竖向排布 -->
-            <a class="icon-link external-link" href="">
+            <!-- <a class="icon-link external-link" href="">
                 <i class="fa fa-envelope-square"></i>
             </a>
             <a class="icon-link external-link" href="">
@@ -134,7 +134,7 @@
             </a>
             <a class="icon-link external-link" href="">
                 <ion-icon name="logo-linkedin"></ion-icon>
-            </a>
+            </a> -->
         </div>
     </div>
     <!-- 这里放置其他内容，例如其他部分的内容或链接 -->
@@ -142,8 +142,8 @@
 
 
 <div class="container">
-    <h2 style="text-align: left;">PUBLICATIONS</h2>
     <div class="content has-text-centered">
+        <h2 style="text-align: left;">PUBLICATIONS</h2>
         <div class="module">
             <div class="image">
                 <!-- You can put your image, video or animated gif here -->
