[update] index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
         max-width: 600px;
         margin: 20px;
     }
-
     .introduction p {
         font-size: 13px; /* 根据需要调整字体大小 */
         color: #888;
@@ -71,6 +70,12 @@
         display: flex;
         flex-direction: row;
         margin-bottom: 20px;
+    }
+    .module h2{
+        position: relative;
+        text-align: left;
+        font-size: 24px; /* 根据需要调整字体大小 */
+        color: #888; /* 根据需要调整颜色 */
     }
     .module .image {
         flex: 1;
@@ -105,8 +110,7 @@
             <h3>PhD Candidate | AI Researcher | Aircraft Engineer</h3>
             <p>I am a PhD student in the Department of Computer Science and Applied Mathematics at the Weizmann Institute of Science under the supervision of Prof. Yaron Lipman.
                 My main research interest is in devising deep learning methods for various 3D shapes analysis and synthesis tasks.</p>
-        </div>
-        <div class="container">
+            
             <!-- 横向排布 -->
             <div class="content has-text-centered">
                 <a class="icon-link external-link" href="">
@@ -122,19 +126,6 @@
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
             </div>
-            <!-- 竖向排布 -->
-            <!-- <a class="icon-link external-link" href="">
-                <i class="fa fa-envelope-square"></i>
-            </a>
-            <a class="icon-link external-link" href="">
-                <ion-icon name="logo-github"></ion-icon>
-            </a>
-            <a class="icon-link external-link" href="">
-                <i class="fa fa-graduation-cap"></i>
-            </a>
-            <a class="icon-link external-link" href="">
-                <ion-icon name="logo-linkedin"></ion-icon>
-            </a> -->
         </div>
     </div>
     <!-- 这里放置其他内容，例如其他部分的内容或链接 -->
@@ -143,8 +134,8 @@
 
 <div class="container">
     <div class="content has-text-centered">
-        <h2 style="text-align: left;">PUBLICATIONS</h2>
         <div class="module">
+            <h2>PUBLICATIONS</h2>
             <div class="image">
                 <!-- You can put your image, video or animated gif here -->
                 <img src="material/500x300.png" alt="科研工作图片">
