[update] index.html

--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
     .module h2{
         position: relative;
         text-align: left;
-        font-size: 24px; /* 根据需要调整字体大小 */
+        font-size: 20px; /* 根据需要调整字体大小 */
         color: #888; /* 根据需要调整颜色 */
     }
     .module .image {
         flex: 1;
-        max-width: 35%;
+        max-width: 40%;
         padding-right: 20px;
     }
     .module .content {
         flex: 1;
-        max-width: 65%;
+        max-width: 60%;
     }
     .module img {
         max-width: 100%;
@@ -133,15 +133,15 @@
 
 
 <div class="container">
-    <div class="content has-text-centered">
-        <div class="module">
-            <h2>PUBLICATIONS</h2>
+    <div class="module">
+        <h2>PUBLICATIONS</h2>
+        <div class="content has-text-centered">
             <div class="image">
                 <!-- You can put your image, video or animated gif here -->
-                <img src="material/500x300.png" alt="科研工作图片">
+                <img src="material/2023aim.gif" alt="科研工作图片">
             </div>
             <div class="content">
-                <h2>科研工作标题</h2>
+                <h2>A Multi-modal Deformable Land-air Robot for Complex Environments</h2>
                 <p>科研工作描述...</p>
             </div>
         </div>
