[update] index.html

--- a/index.html
+++ b/index.html
@@ -129,12 +129,15 @@
 <div class="container">
     <div class="module">
         <h2>PUBLICATIONS</h2>
-        <div class="left">
-            <img src="material/2023aim.gif" alt="Your Image">
+        <div class="container">
+            <div class="left">
+                <img src="material/2023aim.gif" alt="Your Image">
+            </div>
+            <div class="right">
+                <p>This is the explanation text. It can be long enough to wrap to the next line.</p>
+            </div>
         </div>
-        <div class="right">
-            <p>This is the explanation text. It can be long enough to wrap to the next line.</p>
-        </div>
+        
     </div>
 </div>
 
