--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
     .module {
         display: flex;
         flex: 1;
+        max-width: 1000px;
+        max-height: 200px;
     }
     .module h2{
         position: relative;
