[update] index.html

--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
         justify-content: center;
         align-items: center;
         margin-top: 50px;
+        max-width: 1000px;
     }
     .profile img {
         border-radius: 50%;
-        width: 200px;
-        height: 200px;
+        width: 300px;
+        height: 300px;
         object-fit: cover;
         margin-right: 20px;
     }
