[update] index.html

--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
         display: flex;
         align-items: flex-start; /* 上下对齐 */
     }
+    .right h2{
+        position: relative;
+        font-size: 16px; /* 根据需要调整字体大小 */
+        color: #888; /* 根据需要调整颜色 */
+        text-align: left;
+    }
+    .right author {
+        font-size: 13px; /* 根据需要调整字体大小 */
+        color: #888;
+        line-height: 1.6; 
+    }
     img {
         max-width: 100%;
         max-height: 100%;
@@ -143,8 +154,9 @@
             <img src="material/2023aim.gif" alt="Your Image">
         </div>
         <div class="right">
-            <p>This is the explanation text. It can be long enough to wrap to the next line.</p>
-        </div>        
+            <h2>A Multi-modal Deformable Land-air Robot for Complex Environments</h2>
+            <author>Xinyu Zhang, Yuanhao Huang, <b>Kangyao Huang*</b>, Xiaoyu Wang, Dafeng Jin, Huaping Liu, Jun Li</author>
+        </div>
     </div>
 </div>
 
