[update] index.html

--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
         color: #888;
         line-height: 1.6; 
     }
+    .right me {
+        font-size: 13px; /* 根据需要调整字体大小 */
+        color: #000000;
+        line-height: 1.6; 
+        font-weight: bold;
+    }
     img {
         max-width: 100%;
         max-height: 100%;
@@ -155,7 +161,8 @@
         </div>
         <div class="right">
             <h2>A Multi-modal Deformable Land-air Robot for Complex Environments</h2>
-            <author>Xinyu Zhang, Yuanhao Huang, <b>Kangyao Huang*</b>, Xiaoyu Wang, Dafeng Jin, Huaping Liu, Jun Li</author>
+            <br>
+            <author>Xinyu Zhang, Yuanhao Huang, <me>Kangyao Huang*</me>, Xiaoyu Wang, Dafeng Jin, Huaping Liu, Jun Li</author>
         </div>
     </div>
 </div>
