--- a/index.html
+++ b/index.html
@@ -106,12 +106,19 @@
         font-size: 13px; /* 根据需要调整字体大小 */
         color: #888;
         line-height: 1.6; 
+        font-style: oblique;
     }
     .right me {
         font-size: 13px; /* 根据需要调整字体大小 */
         color: #000000;
         line-height: 1.6; 
         font-weight: bold;
+    }
+    .right conf {
+        font-size: 13px; /* 根据需要调整字体大小 */
+        color: #000000;
+        line-height: 1.6; 
+        font-style: italic;
     }
     img {
         max-width: 100%;
@@ -161,8 +168,10 @@
         </div>
         <div class="right">
             <h2>A Multi-modal Deformable Land-air Robot for Complex Environments</h2>
-            <br>
+            <p></p>
             <author>Xinyu Zhang, Yuanhao Huang, <me>Kangyao Huang*</me>, Xiaoyu Wang, Dafeng Jin, Huaping Liu, Jun Li</author>
+            <p></p>
+            <conf>IEEE/ASME International Conference on Advanced Intelligent Mechatronics(AIM) 2023</conf>
         </div>
     </div>
 </div>
