[update] index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
         font-size: 13px; /* 根据需要调整字体大小 */
         color: #888;
         line-height: 1.6; 
-        font-style: oblique;
     }
     .right me {
         font-size: 13px; /* 根据需要调整字体大小 */
@@ -168,10 +167,8 @@
         </div>
         <div class="right">
             <h2>A Multi-modal Deformable Land-air Robot for Complex Environments</h2>
-            <p></p>
-            <author>Xinyu Zhang, Yuanhao Huang, <me>Kangyao Huang*</me>, Xiaoyu Wang, Dafeng Jin, Huaping Liu, Jun Li</author>
-            <p></p>
-            <conf>IEEE/ASME International Conference on Advanced Intelligent Mechatronics(AIM) 2023</conf>
+            <p><author>Xinyu Zhang, Yuanhao Huang, <me>Kangyao Huang*</me>, Xiaoyu Wang, Dafeng Jin, Huaping Liu, Jun Li</author></p>
+            <p><conf>IEEE/ASME International Conference on Advanced Intelligent Mechatronics(AIM) 2023</conf></p>
         </div>
     </div>
 </div>
