--- a/index.html
+++ b/index.html
@@ -166,9 +166,13 @@
             <img src="material/2023aim.gif" alt="Your Image">
         </div>
         <div class="right">
-            <p><h2>A Multi-modal Deformable Land-air Robot for Complex Environments</h2></p>
-            <p><author>Xinyu Zhang, Yuanhao Huang, <me>Kangyao Huang*</me>, Xiaoyu Wang, Dafeng Jin, Huaping Liu, Jun Li</author></p>
-            <p><conf>IEEE/ASME International Conference on Advanced Intelligent Mechatronics(AIM) 2023</conf></p>
+            <h2>A Multi-modal Deformable Land-air Robot for Complex Environments</h2>
+            <div>
+                <author>Xinyu Zhang, Yuanhao Huang, <me>Kangyao Huang*</me>, Xiaoyu Wang, Dafeng Jin, Huaping Liu, Jun Li</author>
+            </div>
+            <div>
+                <conf>IEEE/ASME International Conference on Advanced Intelligent Mechatronics(AIM) 2023</conf>
+            </div>
         </div>
     </div>
 </div>
