[update] index.html

--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
         <div class="introduction">
             <h2>Kangyao Huang</h2>
             <h3>PhD Candidate | AI Researcher | Aircraft Engineer</h3>
-            <p>I am a PhD student in the Department of Computer Science and Applied Mathematics at the Weizmann Institute of Science under the supervision of Prof. Yaron Lipman.
+            <p>I am pursuing a PhD degree in the Department of Computer Science and Technology at the Tsinghua University under the supervision of Prof. Huaping Liu.
+                Before that, I got a MRes in Control & Systems Engineering from ACSE, the University of Sheffield(UoS), UK., and a BEng majoring in Aircraft Design from Northwestern Polytechnical
+                University(NWPU), China. I also have more several years experience in.
+                
                 My main research interest is in devising deep learning methods for various 3D shapes analysis and synthesis tasks.</p>
             
             <!-- 横向排布 -->
