[update] index.html

--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
         line-height: 1.6; 
         font-style: italic;
     }
+    .right > div {
+        display: block;
+        margin-bottom: 10px; /* 可以调整行与行之间的间距 */
+    }
     img {
         max-width: 100%;
         max-height: 100%;
@@ -138,7 +142,7 @@
             <p>I am pursuing a PhD degree in the Department of Computer Science and Technology at the Tsinghua University under the supervision of Prof. Huaping Liu.
                 Before that, I got a MRes in Control & Systems Engineering from ACSE, the University of Sheffield(UoS), UK., and a BEng majoring in Aircraft Design from Northwestern Polytechnical
                 University(NWPU), China. I also have more several years experience in.
-                
+
                 My main research interest is in devising deep learning methods for various 3D shapes analysis and synthesis tasks.</p>
             
             <!-- 横向排布 -->
