[update] index.html

--- a/index.html
+++ b/index.html
@@ -203,18 +203,19 @@
 
 <div class="container">
     <div class="profile">
-        <img src="profile/hky_avatar.jpg" alt="My Photo">
+        <div>
+            <img src="profile/hky_avatar.jpg" alt="My Photo">
+        </div>
         <div class="introduction">
             <h2>Kangyao Huang</h2>
             <h3>PhD Candidate | AI Researcher | Aircraft Engineer</h3>
             <p>I am pursuing a PhD degree in the Department of Computer Science and Technology at the Tsinghua University under the supervision of Prof. Huaping Liu.
-                Before that, I got a MRes in Control & Systems Engineering from ACSE, the University of Sheffield(UoS), UK., and a BEng majoring in Aircraft Design from Northwestern Polytechnical
-                University(NWPU), China. I also have more several years experience in.
+                Before that, I got an MRes in Control & Systems Engineering from ACSE, the University of Sheffield(UoS), UK., and a BEng in Aircraft Design from Northwestern Polytechnical
+                University(NWPU), China. Besides, I have several years start-up experience in aerospace and automation industrial sectors.
 
-                My main research interest is in devising deep learning methods for various 3D shapes analysis and synthesis tasks.</p>
-            
+                My main research interest is in robot learning for virtual and real world practice.</p>
             <!-- 横向排布 -->
-            <div class="content has-text-centered">
+            <div class="content has-text-centered" style="float: right;">
                 <a class="icon-link external-link" href="">
                     <i class="fa fa-envelope-square"></i>
                 </a>
