[update] index.html

--- a/index.html
+++ b/index.html
@@ -437,6 +437,73 @@
         <hr class="sectionTitleRule">
         <hr class="sectionTitleRule2">
 
+        <!-- flyingcar  -->
+        <div onmouseout="idr_stop()" onmouseover="idr_start()">	  
+            <div class="sectionContent" style="padding:0px;vertical-align:middle">
+                <div class="one">
+                    <div class="two" id="idr_image">
+                        <video  width="100%" height="100%" muted="" autoplay="" loop="">
+                            <source src="material/flyingcar.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                        <aside class="externalResourcesNav" style="margin-top:0%">
+                            <div class="dropdown">
+                                <span></span><a href="https://mp.weixin.qq.com/s/u-WIZV_5p_Ua6ohFrNEB9Q" target="_blank">News</a>
+                            </div>
+                            <div class="dropdown"><span></span><a href="https://www.bilibili.com/video/BV1gN4y1a72Z/" target="_blank">Video</a></div>
+                        </aside>
+                    </div>
+                    <img src="material/flyingcar.mp4" width="100%">
+                </div>
+                <script type="text/javascript">
+                    function idr_start() {
+                    document.getElementById('idr_image').style.opacity = "1";
+                    }
+
+                    function idr_stop() {
+                    document.getElementById('idr_image').style.opacity = "0";
+                    }
+                    idr_stop()
+                </script>
+                
+            </div>
+            <section class="section2Content">
+                <h2 class="sectionContentTitle"> Development of Flying Car for Ground-aerial Transportation</h2>
+                <h3 class="sectionContentSubTitle"> 
+                    <b>Departments:</b>
+                    <a style="font-style: italic;font-size: 12px;" href="http://www.svm.tsinghua.edu.cn/">@School of Vehicle and Mobility, THU</a>
+                    <a style="font-style: italic;font-size: 12px;" href="https://www.cs.tsinghua.edu.cn/">@Department of Computer Science and Technology, THU</a>
+                    <a style="font-style: italic;font-size: 12px;" href="https://www.tsari.tsinghua.edu.cn/">@Suzhou Automobile Research Institute-CN</a>
+                    <a style="font-style: italic;font-size: 12px;" href="https://www.sutd.edu.sg/">@Singapore University of Technology and Design</a>
+                    <a style="font-style: italic;font-size: 12px;" href="https://www.81uav.cn/com/bingouav/">@Bingo Intelligence Co., Ltd.</a>
+                    <a style="font-style: italic;font-size: 12px;" href="http://www.fullymax.com/">@Fullymax Co., Ltd.</a>
+                    <a style="font-style: italic;font-size: 12px;" href="http://www.xy-uav.com/">@XY-UAV Co., Ltd.</a>
+                    <a style="font-style: italic;font-size: 12px;" href="https://www.robosense.cn/index">@RoboSense Co., Ltd.</a>
+                </h3>
+                <h3 class="sectionContentSubTitle"> 
+                    Director:
+                    <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>,
+                    Project Manager:
+                    <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a>, 
+                    Technical Project Leader:
+                    <b>Kangyao Huang</b>
+                </h3>
+                <h3 class="sectionContentSubTitle">
+                    <a style="font-size: 12px;">Other participants: </a>
+                    <a style="font-size:10px;">Qihao Zhu, Qingjing Meng, Bo Cui, Songsong Rong, Haowen Shen, Guole Li, Huaping Liu, Jianxi Luo, Dafeng Jin, 
+                        Jun Yang, Shuzhi Ge, Weiguo Yang, Yu Wan, Zhiqiang Yang, Zhenlong Ding, Xiaofeng Xu, Jiang Qian, Chaoyang Ha, 
+                        Yuanhao Huang, Qiujiang Wu, Xingang Wu, Qifan Tan, Mo Zhou, Yang Shen, Li Wang, Yan Han, Zhaosheng Huang, 
+                        Zhiwei Li, Lei Yang, Linxun Shi, Dazhong Xu, Kai Tang, <a style="font-style: italic;font-size:10px;">et cetera</a>.</a>
+                </h3>
+                <p style="font-size: 10px;">We successfully developed the first generation of Tsinghua Mengshi intelligent flying car. 
+                    This vehicle is the world's first pure electric rotorcraft unmanned flying vehicle with integrated intelligent driving function.
+                    We follow the core design concept "lightweight, high loadability". It is a three-dimensional intelligent transportation vehicle designed 
+                    for especially tailored for low-altitude flight and urban travel. The vehicle achieves functions such as aerial flight, ground driving, 
+                    land-air transition, and unmanned aerial and ground driving.
+                </p>
+            </section>
+        </div>
+
         <!-- 2021ad  -->
         <div onmouseout="idr_stop()" onmouseover="idr_start()">	  
             <div class="sectionContent" style="padding:0px;vertical-align:middle">
